--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MP-ecokaishu",
-  "description": "",
+  "description": " ver2.3",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
