--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Vagrantfile
 bootstrap.sh
 wp-config.php
 .sass-cache/
+wp-content/plugins/
 
 #################
 ## Eclipse
@@ -232,3 +233,5 @@ pip-log.txt
 #############
 wp-config.php
 
+wp-config.php
+wp-config.php
